--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1061,7 +1061,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "edecf3ac",
    "metadata": {},
    "outputs": [
@@ -1113,6 +1113,8 @@
     "\n",
     "    coefInversionDict = @strdict coordinates multiOrdersIndices pointsIndices Δ WorderBspline modifiedμ\n",
     "\n",
+    "    @show coordinates multiOrdersIndices pointsIndices Δ WorderBspline modifiedμ\n",
+    "\n",
     "    output=myProduceOrLoad(TaylorCoefInversion,coefInversionDict,\"taylorCoefInv\")\n",
     "    Cˡη=output[\"CˡηGlobal\"]\n",
     "\n",
@@ -1134,14 +1136,14 @@
     "\n",
     "    #region \n",
     "   \n",
-    "    # t\n",
+    "    @show Cˡη[14,1,12]\n",
     "\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 113,
    "id": "9573260e",
    "metadata": {},
    "outputs": [
@@ -1149,16 +1151,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "mu_per_coord = Array{Num, 3}[[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], [1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], [1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]]\n"
+      "coordinates = (x, y, t)\n",
+      "multiOrdersIndices = CartesianIndices((5, 5, 5))\n",
+      "pointsIndices = [[1, 1, 1] [1, 2, 1] [1, 3, 1]; [2, 1, 1] [2, 2, 1] [2, 3, 1]; [3, 1, 1] [3, 2, 1] [3, 3, 1];;; [1, 1, 2] [1, 2, 2] [1, 3, 2]; [2, 1, 2] [2, 2, 2] [2, 3, 2]; [3, 1, 2] [3, 2, 2] [3, 3, 2];;; [1, 1, 3] [1, 2, 3] [1, 3, 3]; [2, 1, 3] [2, 2, 3] [2, 3, 3]; [3, 1, 3] [3, 2, 3] [3, 3, 3]]\n",
+      "Δ = (1.0, 1.0, 1.0)\n",
+      "WorderBspline = [1, 1, 1]\n",
+      "modifiedμ = Any[Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]]\n",
+      "Cˡη[14, 1, 12] = 0.9999999999999822\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3-element Vector{Array{Num, 3}}:\n",
-       " [1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n",
-       " [1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n",
-       " [1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]"
+       "0.9999999999999822"
       ]
      },
      "metadata": {},
