--- a/OPTmotors/misc/checkTaylorCoefTTTTT.ipynb
+++ b/OPTmotors/misc/checkTaylorCoefTTTTT.ipynb
@@ -5,7 +5,17 @@
    "execution_count": null,
    "id": "cd2f71d5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n",
+      "┌ Warning: Metal.jl not available or no Metal devices detected: UndefVarError(:Metal, 0x0000000000009968, Main)\n",
+      "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchEnzyme.jl:27\n"
+     ]
+    }
+   ],
    "source": [
     "using Pkg\n",
     "\n",
