--- a/OPTmotors/misc/checkTaylorCoefTTTTT.ipynb
+++ b/OPTmotors/misc/checkTaylorCoefTTTTT.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cd2f71d5",
    "metadata": {},
    "outputs": [
@@ -14,6 +14,15 @@
       "┌ Warning: Metal.jl not available or no Metal devices detected: UndefVarError(:Metal, 0x0000000000009968, Main)\n",
       "└ @ Main /Users/nobuaki/Documents/Github/flexibleDSM/OPTmotors/src/batchEnzyme.jl:27\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "constructingNumericalDiscretisedEquations (generic function with 2 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
@@ -28,10 +37,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e5181ec6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(Differential(t)(Differential(t)(u(x, y, t))) - (Differential(x)(Differential(x)(u(x, y, t))) + Differential(y)(Differential(y)(u(x, y, t))))*(v(x, y)^2), u(x, y, t), v(x, y), f(x, y, t), f(x, y, t), 1, (x, y, t), Any[Differential(x), Differential(y), Differential(t)], Any[Differential(x) ∘ Differential(x), Differential(y) ∘ Differential(y), Differential(t) ∘ Differential(t)])"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "famousEquationType=\"2DacousticTime\"\n",
     "exprs,fields,vars,extexprs,extfields,extvars,coordinates,∂,∂²=famousEquations(famousEquationType)"
