--- a/OPTmotors/misc/checkTaylorCoefTTTTT.ipynb
+++ b/OPTmotors/misc/checkTaylorCoefTTTTT.ipynb
@@ -58,11 +58,128 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
+   "id": "9a490082",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "CartesianIndices((5, 5, 5))"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "multiOrdersIndices = CartesianIndices((5, 5, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "id": "c06bc7be",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3-element Vector{Any}:\n",
+       " Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n",
+       " Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]\n",
+       " Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "pointsIndices = [[1, 1, 1] [1, 2, 1] [1, 3, 1]; [2, 1, 1] [2, 2, 1] [2, 3, 1]; [3, 1, 1] [3, 2, 1] [3, 3, 1];;; [1, 1, 2] [1, 2, 2] [1, 3, 2]; [2, 1, 2] [2, 2, 2] [2, 3, 2]; [3, 1, 2] [3, 2, 2] [3, 3, 2];;; [1, 1, 3] [1, 2, 3] [1, 3, 3]; [2, 1, 3] [2, 2, 3] [2, 3, 3]; [3, 1, 3] [3, 2, 3] [3, 3, 3]]\n",
+    "Δ = (1.0, 1.0, 1.0)\n",
+    "WorderBspline = [1, 1, 1]\n",
+    "modifiedμ = Any[Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "1c01bf5b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Dict{String, Any} with 6 entries:\n",
+       "  \"coordinates\"        => (x, y, t)\n",
+       "  \"Δ\"                  => (1.0, 1.0, 1.0)\n",
+       "  \"modifiedμ\"          => Any[Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.…\n",
+       "  \"WorderBspline\"      => [1, 1, 1]\n",
+       "  \"multiOrdersIndices\" => CartesianIndices((5, 5, 5))\n",
+       "  \"pointsIndices\"      => [1 1 1; 1 2 3; … ; 1 2 3; 1 1 1;;; 1 1 1; 1 2 3; … ; …"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "coefInversionDict = @strdict coordinates multiOrdersIndices pointsIndices Δ WorderBspline modifiedμ"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "6a63981a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Info: File /Users/nobuaki/Documents/Github/flexibleDSM/data/taylorCoefInv/taylorCoefInv_d35b00a6.jld2 does not exist. Producing it now...\n",
+      "└ @ DrWatson /Users/nobuaki/.julia/packages/DrWatson/2QF5p/src/saving_files.jl:106\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, μ_oneD, (pointsIndices[μ_oneD])[iCoord], WorderBspline[iCoord] + 1, iCoord) = (1, 1, 1, 2, 1)\n",
+      "(tmp1, tmp2, tmp3) = (1.0, 3.0, 2.0)\n"
+     ]
+    },
+    {
+     "ename": "BoundsError",
+     "evalue": "BoundsError: attempt to access Int64 at index [2]",
+     "output_type": "error",
+     "traceback": [
+      "BoundsError: attempt to access Int64 at index [2]\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] getindex\n",
+      "   @ ./number.jl:98 [inlined]\n",
+      " [2] macro expansion\n",
+      "   @ ./show.jl:1270 [inlined]\n",
+      " [3] TaylorCoefInversion(numberOfLs::Int64, numberOfEtas::Int64, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Int64, 3}, Δ::Tuple{Float64, Float64, Float64}, μ_oneD::Int64, WorderBspline::Vector{Int64}, modifiedμ::Vector{Any})\n",
+      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/OPTnewEngines.jl:224\n",
+      " [4] TaylorCoefInversion(coefInversionDict::Dict{String, Any})\n",
+      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/OPTnewEngines.jl:194\n",
+      " [5] produce_or_load(f::typeof(TaylorCoefInversion), config::Dict{String, Any}, path::String; suffix::String, prefix::String, tag::Bool, gitpath::String, loadfile::Bool, storepatch::Bool, force::Bool, verbose::Bool, wsave_kwargs::@NamedTuple{}, wload_kwargs::@NamedTuple{}, filename::var\"#myProduceOrLoad##2#myProduceOrLoad##3\"{String, Dict{String, Any}}, kwargs::@Kwargs{})\n",
+      "   @ DrWatson ~/.julia/packages/DrWatson/2QF5p/src/saving_files.jl:108\n",
+      " [6] myProduceOrLoad(functionName::Function, paramDict::Dict{String, Any}, directoryName::String, prefixName::String)\n",
+      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/batchDrWatson.jl:27\n",
+      " [7] myProduceOrLoad(functionName::Function, paramDict::Dict{String, Any}, directoryName::String)\n",
+      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/src/batchDrWatson.jl:13\n",
+      " [8] top-level scope\n",
+      "   @ ~/Documents/Github/flexibleDSM/OPTmotors/misc/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_W5sZmlsZQ==.jl:1"
+     ]
+    }
+   ],
+   "source": [
+    "output=myProduceOrLoad(TaylorCoefInversion,coefInversionDict,\"taylorCoefInv\")"
+   ]
   }
  ],
  "metadata": {
