--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1081,7 +1081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": null,
    "id": "edecf3ac",
    "metadata": {},
    "outputs": [
@@ -1133,7 +1133,7 @@
     "\n",
     "    coefInversionDict = @strdict coordinates multiOrdersIndices pointsIndices Δ WorderBspline modifiedμ\n",
     "\n",
-    "    @show coordinates multiOrdersIndices pointsIndices Δ WorderBspline modifiedμ\n",
+    "    #@show coordinates multiOrdersIndices pointsIndices Δ WorderBspline modifiedμ\n",
     "\n",
     "    output=myProduceOrLoad(TaylorCoefInversion,coefInversionDict,\"taylorCoefInv\")\n",
     "    Cˡη=output[\"CˡηGlobal\"]\n",
@@ -1145,6 +1145,8 @@
     "    # the order is: (νᶜ,) ν, i, j  here\n",
     "    Ajiννᶜ = Array{Num,4}(undef,length(pointsIndices),length(pointsIndices),NtypeofFields,NtypeofExpr)\n",
     "\n",
+    "    # but this will already include bigα so the coefficients for each α_{nn'ji} should be given here\n",
+    "\n",
     "    #endregion\n",
     "\n",
     "    #region useful LinearIndices conversion functions\n",
@@ -1155,35 +1157,56 @@
     "    #endregion\n",
     "\n",
     "    #region \n",
-    "   \n",
-    "    @show Cˡη[12,1,12]\n",
+    "    \n",
+    "    \n",
     "    \n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 143,
    "id": "9573260e",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "coordinates = (x, y, t)\n",
-      "multiOrdersIndices = CartesianIndices((5, 5, 5))\n",
-      "pointsIndices = [[1, 1, 1] [1, 2, 1] [1, 3, 1]; [2, 1, 1] [2, 2, 1] [2, 3, 1]; [3, 1, 1] [3, 2, 1] [3, 3, 1];;; [1, 1, 2] [1, 2, 2] [1, 3, 2]; [2, 1, 2] [2, 2, 2] [2, 3, 2]; [3, 1, 2] [3, 2, 2] [3, 3, 2];;; [1, 1, 3] [1, 2, 3] [1, 3, 3]; [2, 1, 3] [2, 2, 3] [2, 3, 3]; [3, 1, 3] [3, 2, 3] [3, 3, 3]]\n",
-      "Δ = (1.0, 1.0, 1.0)\n",
-      "WorderBspline = [1, 1, 1]\n",
-      "modifiedμ = Any[Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0], Num[1 1 1; 3 3 3; 2.0 2.0 2.0;;; 1 1 1; 3 3 3; 2.0 2.0 2.0]]\n",
-      "Cˡη[12, 1, 12] = 0.999999999999992\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "0.999999999999992"
+       "5×5×5 LinearIndices{3, Tuple{UnitRange{Int64}, UnitRange{Int64}, UnitRange{Int64}}}:\n",
+       "[:, :, 1] =\n",
+       " 1   6  11  16  21\n",
+       " 2   7  12  17  22\n",
+       " 3   8  13  18  23\n",
+       " 4   9  14  19  24\n",
+       " 5  10  15  20  25\n",
+       "\n",
+       "[:, :, 2] =\n",
+       " 26  31  36  41  46\n",
+       " 27  32  37  42  47\n",
+       " 28  33  38  43  48\n",
+       " 29  34  39  44  49\n",
+       " 30  35  40  45  50\n",
+       "\n",
+       "[:, :, 3] =\n",
+       " 51  56  61  66  71\n",
+       " 52  57  62  67  72\n",
+       " 53  58  63  68  73\n",
+       " 54  59  64  69  74\n",
+       " 55  60  65  70  75\n",
+       "\n",
+       "[:, :, 4] =\n",
+       " 76  81  86  91   96\n",
+       " 77  82  87  92   97\n",
+       " 78  83  88  93   98\n",
+       " 79  84  89  94   99\n",
+       " 80  85  90  95  100\n",
+       "\n",
+       "[:, :, 5] =\n",
+       " 101  106  111  116  121\n",
+       " 102  107  112  117  122\n",
+       " 103  108  113  118  123\n",
+       " 104  109  114  119  124\n",
+       " 105  110  115  120  125"
       ]
      },
      "metadata": {},
@@ -1196,11 +1219,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 150,
    "id": "bd054d6e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "α = (node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(3, 1, 1))\n",
+      "α = (node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 3, 1))\n",
+      "α = (node = 1, nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 1, 3))\n"
+     ]
+    }
+   ],
+   "source": [
+    "for α ∈ bigα[1,1]\n",
+    "    @show α\n",
+    "end"
+   ]
   },
   {
    "cell_type": "code",
