--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -10,17 +10,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 85,
    "id": "85b7f81f",
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m "
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -32,7 +25,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "project at `~/Documents/Github/flexibleDSM`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/Documents/Github/flexibleDSM`\n"
      ]
     },
     {
@@ -67,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 86,
    "id": "dda029a4",
    "metadata": {},
    "outputs": [
@@ -87,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 87,
    "id": "0ae67625",
    "metadata": {},
    "outputs": [
@@ -110,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 88,
    "id": "29587f11",
    "metadata": {},
    "outputs": [
@@ -131,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 89,
    "id": "7bedc499",
    "metadata": {},
    "outputs": [],
@@ -181,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 90,
    "id": "2c7f82cd",
    "metadata": {},
    "outputs": [
@@ -209,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 91,
    "id": "f5ea4cf5",
    "metadata": {},
    "outputs": [],
@@ -222,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 92,
    "id": "6274c090",
    "metadata": {},
    "outputs": [
@@ -253,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 93,
    "id": "2a2ab3be",
    "metadata": {},
    "outputs": [
@@ -273,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 94,
    "id": "8cd30c3a",
    "metadata": {},
    "outputs": [
@@ -309,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 95,
    "id": "98b5b8ba",
    "metadata": {},
    "outputs": [
@@ -331,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 96,
    "id": "7f90a668",
    "metadata": {},
    "outputs": [
@@ -351,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 97,
    "id": "6596fcab",
    "metadata": {},
    "outputs": [
@@ -378,7 +371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 98,
    "id": "884a4dc6",
    "metadata": {},
    "outputs": [
@@ -420,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 99,
    "id": "0a8e6de0",
    "metadata": {},
    "outputs": [],
@@ -430,7 +423,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 100,
    "id": "d4f145f6",
    "metadata": {},
    "outputs": [],
@@ -440,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 101,
    "id": "3ccec8ec",
    "metadata": {},
    "outputs": [
@@ -476,7 +469,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 102,
    "id": "521d97bb",
    "metadata": {},
    "outputs": [],
@@ -487,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 103,
    "id": "bc933626",
    "metadata": {},
    "outputs": [
@@ -512,7 +505,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 104,
    "id": "723712da",
    "metadata": {},
    "outputs": [],
@@ -523,7 +516,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 105,
    "id": "9612c45a",
    "metadata": {},
    "outputs": [],
@@ -533,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 106,
    "id": "9e670dfe",
    "metadata": {},
    "outputs": [
@@ -575,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 107,
    "id": "24c896e3",
    "metadata": {},
    "outputs": [
@@ -624,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 108,
    "id": "0d7f0267",
    "metadata": {},
    "outputs": [
@@ -678,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 109,
    "id": "9692ea9e",
    "metadata": {},
    "outputs": [
@@ -719,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 110,
    "id": "447fc4a0",
    "metadata": {},
    "outputs": [
@@ -751,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 111,
    "id": "38a0040a",
    "metadata": {},
    "outputs": [
@@ -798,7 +791,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 112,
    "id": "df9f803d",
    "metadata": {},
    "outputs": [],
@@ -810,7 +803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 113,
    "id": "1122af9d",
    "metadata": {},
    "outputs": [
@@ -858,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 114,
    "id": "efaa915f",
    "metadata": {},
    "outputs": [
@@ -878,7 +871,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 115,
    "id": "82221aca",
    "metadata": {},
    "outputs": [
@@ -919,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 116,
    "id": "ab468ab3",
    "metadata": {},
    "outputs": [
@@ -966,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 117,
    "id": "f32e591f",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1009,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 118,
    "id": "2bf54308",
    "metadata": {},
    "outputs": [],
@@ -1026,7 +1019,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 119,
    "id": "11be79e2",
    "metadata": {},
    "outputs": [
@@ -1064,26 +1057,6 @@
     "    end\n",
     "    return valid_pairs\n",
     "end\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "id": "06edd138",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "constructingNumericalDiscretisedEquations (generic function with 2 methods)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "include(\"../src/OPTnewEngines.jl\")"
    ]
   },
   {
@@ -1161,47 +1134,51 @@
     "    #region useful LinearIndices conversion functions\n",
     "    \n",
     "    LI_points = LinearIndices(pointsIndices)\n",
-    "    LI_L_MINUS_N = LinearIndices(L_MINUS_N)\n",
+    "    LI_L_MINUS_N_plus_1 = LinearIndices(L_MINUS_N.+vec2car(ones(Int,nCoordinates)))\n",
     "  \n",
     "    #endregion\n",
     "\n",
     "    #region make the table for each (x',x,n',n) (x=η+μ)\n",
-    "    totalSmallα = sum(length(bigα[iExpr, iField]) for iExpr in 1:NtypeofExpr, iField in 1:NtypeofFields)\n",
+    "    nTotalSmallα = sum(length(bigα[iExpr, iField]) for iExpr in 1:NtypeofExpr, iField in 1:NtypeofFields)\n",
     "\n",
-    "    tableForLoop = Array{Int32,3}(undef,totalSmallα)\n",
+    "    tableForLoop = Array{Int32,3}(undef,4,nLs*nLs,nTotalSmallα)\n",
+    "    fill!(tableForLoop, -1)\n",
     "    indexLinearα = 1\n",
-    "\n",
     "    for iExpr ∈ 1:NtypeofExpr,iField ∈ 1:NtypeofFields\n",
-    "        α = bigα[iExpr,iField]\n",
+    "        @show α = bigα[iExpr,iField]\n",
     "        for eachα ∈ α\n",
-    "            nᶜ = eachα.nᶜ\n",
-    "            n = eachα.n\n",
+    "            nᶜ = eachα.nᶜ - vec2car(ones(Int,nCoordinates))\n",
+    "            n = eachα.n - vec2car(ones(Int,nCoordinates))\n",
     "            #nodeValue = eachα.node # not important at this point\n",
     "            # Available indices\n",
     "            Lᶜ_avail = (nᶜ .+ L_MINUS_N) ∩ L_MINUS_N\n",
     "            L_avail = (n .+ L_MINUS_N) ∩ L_MINUS_N\n",
     "            Lᶜ_Nᶜ_avail = Lᶜ_avail .- nᶜ\n",
     "            L_N_avail = L_avail .- n\n",
+    "            \n",
+    "            iL=1\n",
     "            for lᶜ ∈ Lᶜ_avail, l ∈ L_avail\n",
-    "                linearlᶜ = LI_L_MINUS_N[lᶜ]\n",
-    "                linearl = LI_L_MINUS_N[l]\n",
-    "                linearlᶜ_nᶜ = LI_L_MINUS_N[lᶜ-nᶜ]\n",
-    "                linearl_n = LI_L_MINUS_N[l-n]\n",
-    "\n",
+    "                \n",
+    "                tableForLoop[1,iL,indexLinearα]= LI_L_MINUS_N_plus_1[lᶜ+vec2car(ones(Int,nCoordinates))]\n",
+    "                tableForLoop[2,iL,indexLinearα]= LI_L_MINUS_N_plus_1[l+vec2car(ones(Int,nCoordinates))]\n",
+    "                tableForLoop[3,iL,indexLinearα]= LI_L_MINUS_N_plus_1[lᶜ-nᶜ+vec2car(ones(Int,nCoordinates))]\n",
+    "                tableForLoop[4,iL,indexLinearα]= LI_L_MINUS_N_plus_1[l-n+vec2car(ones(Int,nCoordinates))]\n",
+    "            \n",
+    "                \n",
+    "                iL += 1\n",
     "            end\n",
-    "\n",
+    "       \n",
     "            indexLinearα += 1\n",
     "        end\n",
     "    end\n",
     "\n",
+    "\n",
     "    #endregion\n",
     "\n",
     "    #region adapt the arrays to the GPU backend\n",
-    "    @show typeof(Cˡη),typeof(integral1DWYYKK),size(integral1DWYYKK)\n",
+    "\n",
+    "    tableForLoop_gpu = Adapt.adapt(backend,tableForLoop)\n",
     "    C_gpu = Adapt.adapt(backend,Float32.(Cˡη))\n",
-    " \n",
-    "\n",
-    "\n",
     "    int_gpu_single = map(integral1DWYYKK) do A\n",
     "        Adapt.adapt(backend, Float32.(A))\n",
     "    end\n",
@@ -1211,6 +1188,8 @@
     "        int_gpu[i,:, :, :, :] .= int_gpu_single[i]\n",
     "    end\n",
     "\n",
+    "    output_gpu = adapt(backend, zeros(Float32, nPoints, nPoints, nTotalSmallα))\n",
+    "\n",
     "    #endregion\n",
     "    \n",
     "\n",
@@ -1219,13 +1198,13 @@
     "    output,   # Array{Float32,4} on GPU\n",
     "    C,        # Array{Float32,3} on GPU\n",
     "    int,    # Array{Float32,5} on GPU: (nDim, P, P, L, L)\n",
-    "    P, L, nDim\n",
+    "    table, # Array{Int32,3} on GPU: (4,L*L, nalpha)\n",
+    "    P, L, nDim, nalpha\n",
     "    )\n",
     "\n",
     "        xp = @index(Global, 1)\n",
     "        x  = @index(Global, 2)\n",
-    "        np = @index(Global, 3)\n",
-    "        n  = @index(Global, 4)\n",
+    "        \n",
     "\n",
     "        # Bounds guard WITHOUT return\n",
     "        if xp ≤ size(output,1) &&\n",
@@ -1265,7 +1244,7 @@
     "\n",
     "    #endregion\n",
     "   \n",
-    "    output_gpu = adapt(backend, zeros(Float32, nPoints, nPoints, nLs, nLs))\n",
+    "    \n",
     "    kernel = window_contraction!(backend)\n",
     "\n",
     "    kernel(output_gpu, C_gpu, int_gpu, nPoints, nLs, nCoordinates;\n",
@@ -1276,24 +1255,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 153,
    "id": "9573260e",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `iField` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "α = bigα[iExpr, iField] = Any[(node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(3, 1, 1)), (node = -(v(x, y)^2), nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 3, 1)), (node = 1, nᶜ = CartesianIndex(1, 1, 1), n = CartesianIndex(1, 1, 3))]\n",
+      "tableForLoop[:, 2, 1] = Int32[1, 4, 1, 2]\n",
+      "(typeof(Cˡη), typeof(integral1DWYYKK), size(integral1DWYYKK)) = (Array{Float64, 3}, Vector{Any}, (3,))\n"
+     ]
+    },
+    {
+     "ename": "DimensionMismatch",
+     "evalue": "DimensionMismatch: array could not be broadcast to match destination",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: `iField` not defined in `Main`\n",
-      "Suggestion: check for spelling errors or missing imports.\n",
+      "DimensionMismatch: array could not be broadcast to match destination\n",
       "\n",
       "Stacktrace:\n",
-      " [1] AmatrixSemiSymbolicGPU(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64; threads::Int64, backend::MetalBackend)\n",
-      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X52sZmlsZQ==.jl:66\n",
-      " [2] AmatrixSemiSymbolicGPU(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64)\n",
+      " [1] check_broadcast_shape\n",
+      "   @ ./broadcast.jl:559 [inlined]\n",
+      " [2] check_broadcast_axes\n",
+      "   @ ./broadcast.jl:562 [inlined]\n",
+      " [3] instantiate\n",
+      "   @ ./broadcast.jl:316 [inlined]\n",
+      " [4] materialize!\n",
+      "   @ ~/.julia/packages/Metal/av3If/src/broadcast.jl:48 [inlined]\n",
+      " [5] materialize!(dest::SubArray{Float32, 4, MtlArray{Float32, 5, Metal.PrivateStorage}, Tuple{Int64, Vararg{Base.Slice{Base.OneTo{Int64}}, 4}}, true}, bc::Base.Broadcast.Broadcasted{Metal.MtlArrayStyle{4, Metal.PrivateStorage}, Nothing, typeof(identity), Tuple{MtlArray{Float32, 4, Metal.PrivateStorage}}})\n",
+      "   @ Base.Broadcast ./broadcast.jl:902\n",
+      " [6] AmatrixSemiSymbolicGPU(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64; threads::Int64, backend::MetalBackend)\n",
+      "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X52sZmlsZQ==.jl:112\n",
+      " [7] AmatrixSemiSymbolicGPU(coordinates::Tuple{Num, Num, Num}, multiOrdersIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, pointsIndices::Array{Vector{Int64}, 3}, multiPointsIndices::CartesianIndices{3, Tuple{Base.OneTo{Int64}, Base.OneTo{Int64}, Base.OneTo{Int64}}}, middleLinearν::Int64, Δ::Tuple{Float64, Float64, Float64}, varM::Matrix{Any}, bigα::Matrix{Any}, orderBspline::Vector{Int64}, WorderBspline::Vector{Int64}, NtypeofExpr::Int64, NtypeofFields::Int64)\n",
       "   @ Main ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X52sZmlsZQ==.jl:1\n",
-      " [3] top-level scope\n",
+      " [8] top-level scope\n",
       "   @ ~/Documents/Github/flexibleDSM/OPTmotors/myOwnApplications/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X53sZmlsZQ==.jl:1"
      ]
     }
@@ -1304,7 +1301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 122,
    "id": "bd054d6e",
    "metadata": {},
    "outputs": [
@@ -1326,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 123,
    "id": "b3941505",
    "metadata": {},
    "outputs": [],
