--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1194,16 +1194,19 @@
     "    \n",
     "\n",
     "    #region GPU kernel\n",
-    "    @kernel function window_contraction!(\n",
-    "    output,   # Array{Float32,4} on GPU\n",
-    "    C,        # Array{Float32,3} on GPU\n",
+    "    @kernel function windowContraction!(\n",
+    "    output,   # Array{Float32,4} on GPU: (P,P,nalpha)\n",
+    "    C,        # Array{Float32,3} on GPU: (P,L,P)\n",
     "    int,    # Array{Float32,5} on GPU: (nDim, P, P, L, L)\n",
     "    table, # Array{Int32,3} on GPU: (4,L*L, nalpha)\n",
     "    P, L, nDim, nalpha\n",
     "    )\n",
     "\n",
-    "        xp = @index(Global, 1)\n",
-    "        x  = @index(Global, 2)\n",
+    "\n",
+    "        xᶜ = @index(Global, 1)\n",
+    "        x = @index(Global,2)\n",
+    "        α = @index(Global,3)\n",
+    "        \n",
     "        \n",
     "\n",
     "        # Bounds guard WITHOUT return\n",
@@ -1248,7 +1251,7 @@
     "    kernel = window_contraction!(backend)\n",
     "\n",
     "    kernel(output_gpu, C_gpu, int_gpu, nPoints, nLs, nCoordinates;\n",
-    "            ndrange=(nPoints, nPoints, nLs, nLs))\n",
+    "            ndrange=(nPoints, nPoints, nTotalSmallα))\n",
     "            return\n",
     "end "
    ]
