--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1208,12 +1208,8 @@
     "        α = @index(Global,3)\n",
     "        \n",
     "        \n",
-    "\n",
-    "        # Bounds guard WITHOUT return\n",
-    "        if xp ≤ size(output,1) &&\n",
-    "        x  ≤ size(output,2) &&\n",
-    "        np ≤ size(output,3) &&\n",
-    "        n  ≤ size(output,4)\n",
+    "        if xᶜ ≤ size(output,1) && x ≤ size(output,2) && α ≤ size(output,3)\n",
+    "    \n",
     "\n",
     "            acc = zero(eltype(output))\n",
     "\n",
