--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1210,34 +1210,26 @@
     "        \n",
     "        if xᶜ ≤ size(output,1) && x ≤ size(output,2) && α ≤ size(output,3)\n",
     "    \n",
-    "\n",
     "            acc = zero(eltype(output))\n",
     "\n",
-    "            @inbounds for lp in 1:L\n",
-    "                lp_shift = lp - np\n",
-    "                if 1 ≤ lp_shift ≤ L\n",
-    "                    for l in 1:L\n",
-    "                        l_shift = l - n\n",
-    "                        if 1 ≤ l_shift ≤ L\n",
-    "                            for mup in 1:P\n",
-    "                                Cxp = C[xp, lp, mup]\n",
-    "                                for mu in 1:P\n",
-    "                                    tmp = Cxp * C[x, l, mu]\n",
+    "            for idx in 1:size(table, 2)  # iterate over all entries in table for this alpha\n",
+    "                i = table[1, idx, α]\n",
+    "                j = table[2, idx, α]\n",
+    "                k = table[3, idx, α]\n",
+    "                l = table[4, idx, α]\n",
     "\n",
-    "                                    @inbounds for i = 1:nDim\n",
-    "                                        tmp *= int[i, mup, mu, lp_shift, l_shift]\n",
-    "\n",
-    "                                    end\n",
-    "\n",
-    "                                    acc += tmp\n",
-    "                                end\n",
-    "                            end\n",
+    "                for μp in 1:L\n",
+    "                    for μ in 1:L\n",
+    "                        prod_int = 1.0f0\n",
+    "                        for iDim in 1:nDim\n",
+    "                            prod_int *= int[iDim, μp, μ, k, l]\n",
     "                        end\n",
+    "                        acc += C[xp, i, μp] * C[x, j, μ] * prod_int  # <- corrected x' in first C\n",
     "                    end\n",
     "                end\n",
     "            end\n",
     "\n",
-    "            output[xp, x, np, n] = acc\n",
+    "            output[xp, x, α] = acc\n",
     "        end\n",
     "    end\n",
     "\n",
