--- a/OPTmotors/myOwnApplications/demo1.ipynb
+++ b/OPTmotors/myOwnApplications/demo1.ipynb
@@ -1218,13 +1218,15 @@
     "                k = table[3, idx, α]\n",
     "                l = table[4, idx, α]\n",
     "\n",
-    "                for μp in 1:L\n",
-    "                    for μ in 1:L\n",
-    "                        prod_int = 1.0f0\n",
-    "                        for iDim in 1:nDim\n",
-    "                            prod_int *= int[iDim, μp, μ, k, l]\n",
+    "                if i >0\n",
+    "                    for μp in 1:L\n",
+    "                        for μ in 1:L\n",
+    "                            prod_int = 1.0f0\n",
+    "                            for iDim in 1:nDim\n",
+    "                                prod_int *= int[iDim, μp, μ, k, l]\n",
+    "                            end\n",
+    "                            acc += C[xp, i, μp] * C[x, j, μ] * prod_int  # <- corrected x' in first C\n",
     "                        end\n",
-    "                        acc += C[xp, i, μp] * C[x, j, μ] * prod_int  # <- corrected x' in first C\n",
     "                    end\n",
     "                end\n",
     "            end\n",
@@ -1238,7 +1240,7 @@
     "    \n",
     "    kernel = window_contraction!(backend)\n",
     "\n",
-    "    kernel(output_gpu, C_gpu, int_gpu, nPoints, nLs, nCoordinates;\n",
+    "    kernel(output_gpu, C_gpu, int_gpu, tableForLoop_gpu,nPoints, nLs, nCoordinates;\n",
     "            ndrange=(nPoints, nPoints, nTotalSmallα))\n",
     "            return\n",
     "end "
